fix(footer): remove z-index

--- a/src/components/layout/footer/Footer.sass
+++ b/src/components/layout/footer/Footer.sass
@@ -3,7 +3,6 @@
 .footer
   background-color: transparent
   border: none
-  z-index: -1
   .content
     padding: 20px
     text-align: center
